<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_traduccion_texto"
        android:enabled="true"
        android:icon="@drawable/text"
        android:title="@string/str_menu_texto"/>
    <item
        android:id="@+id/nav_traduccion_documento"
        android:enabled="true"
        android:icon="@drawable/upload"
        android:title="@string/str_menu_doc"/>
    <item
        android:id="@+id/nav_traduccion_camara"
        android:enabled="true"
        android:icon="@drawable/camera2"
        android:title="@string/str_menu_cam"/>
    <item
        android:id="@+id/nav_favoritos"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/str_menu_gdo"/>
    <item
        android:id="@+id/nav_diccionario"
        android:enabled="true"
        android:icon="@drawable/dictionary"
        android:title="@string/str_menu_dic"/>
</menu>